# quadruped-local-packages

./: README.md
examples/mujoco_example/: CMakeLists.txt
examples/mujoco_example/src/: MujocoExample.cpp
src/: footstep_planner.cpp  gait_params.cpp  gait_sequence.cpp  linearize_dynamics.cpp  main_test_files.cpp  robot_params.cpp
src2/: memory_allocation.cpp  robot_paramsv2.cpp
